--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <jackson.version>2.17.1</jackson.version>
+        <langchain.version>0.31.0</langchain.version>
         <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
     </properties>
 
