created skeleton pipeline, prototyped python image encoding

--- a/compose.yaml
+++ b/compose.yaml
@@ -35,17 +35,17 @@ services:
     profiles:
       - disabled
 
-  submit-review-loader:
+  submit-image-loader:
     image: hazelcast/hazelcast-enterprise:5.5.0-SNAPSHOT
     volumes:
       - ".:/project"
     command: >
       hz-cli submit 
           -v 
-          -c=hazelcast.platform.labs.podcast.reviews.ReviewIngestPipeline  
+          -c=hazelcast.platform.labs.podcast.reviews.PatentIngestPipeline  
           -t=dev@hz   
-          /project/podcast-data-ingest/target/podcast-data-ingest-1.0-SNAPSHOT.jar 
-          /project/data/archive/reviews.json
+          /project/patent-data-ingest/target/patent-data-ingest-1.0-SNAPSHOT.jar 
+          /project/data/train_mini.csv
     networks:
       - hznet
     profiles:
