--- a/image-encode-pipeline/pom.xml
+++ b/image-encode-pipeline/pom.xml
@@ -6,13 +6,13 @@
 
     <parent>
         <groupId>com.hazelcast.solutions</groupId>
-        <artifactId>podcast-qa</artifactId>
+        <artifactId>hazelcast-image-search</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>podcast-data-ingest</artifactId>
+    <artifactId>image-encode-pipeline</artifactId>
 
-    <name>podcast-data-ingest</name>
+    <name>image-encode-pipeline</name>
 
 
     <dependencies>
@@ -23,11 +23,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <version>${langchain.version}</version>
@@ -36,6 +31,12 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
             <version>${langchain.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
