--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <jackson.version>2.17.1</jackson.version>
-        <langchain.version>0.31.0</langchain.version>
         <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
         <log4j.version>2.23.1</log4j.version>
+        <djl.version>0.28.0</djl.version>
     </properties>
 
     <repositories>
