--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
         <log4j.version>2.23.1</log4j.version>
         <djl.version>0.28.0</djl.version>
+        <jackson.version>2.15.1</jackson.version>
     </properties>
 
     <repositories>
