--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
 
   hz:
-    image: wrmay/hazelcast-enterprise:5.5.0
+    image: hazelcast/hazelcast-enterprise:5.5.0-SNAPSHOT
     environment:
       HZ_LICENSEKEY: ${HZ_LICENSEKEY}
       JAVA_OPTS: -Dhazelcast.config=/project/hazelcast.yaml -Dlog4j.configurationFile=/project/log4j2.properties  -Xmx5g  -XX:+UseZGC
