--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <jackson.version>2.17.1</jackson.version>
-        <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
+        <hazelcast.version>5.5.0</hazelcast.version>
         <!-- dropping back to 5.4 due to ${guava.version} problem with latest -->
-        <hazelcast.jet.python.version>5.5.0-SNAPSHOT</hazelcast.jet.python.version>
+        <hazelcast.jet.python.version>5.5.0</hazelcast.jet.python.version>
         <log4j.version>2.23.1</log4j.version>
         <djl.version>0.28.0</djl.version>
         <jackson.version>2.15.1</jackson.version>
@@ -26,14 +26,14 @@
 
     <repositories>
         <repository>
-            <id>hazelcast-ee-snapshot</id>
+            <id>private-repository</id>
             <name>Hazelcast Private Snapshot Repository</name>
-            <url>https://repository.hazelcast.com/snapshot</url>
+            <url>https://repository.hazelcast.com/release/</url>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true/enabled>
             </releases>
             <snapshots>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </snapshots>
         </repository>
     </repositories>
