--- a/python-container/Dockerfile
+++ b/python-container/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3
+FROM python:3.12
 
-RUN pip install sentence-transformers jupyter pytest
+RUN pip install sentence-transformers==3.0.1 jupyter==1.1.1 pytest==8.3.2
 
 WORKDIR /root
 
